--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Page Not Found :(</title>
+        <title>Az oldal nem található :(</title>
         <style>
             ::-moz-selection {
                 background: #b3d4fc;
@@ -141,12 +141,12 @@
     </head>
     <body>
         <div class="container">
-            <h1>Not found <span>:(</span></h1>
-            <p>Sorry, but the page you were trying to view does not exist.</p>
-            <p>It looks like this was the result of either:</p>
+            <h1>Az oldal nem található <span>:(</span></h1>
+            <p>A keresett oldal nem található meg szerverünkön.</p>
+            <p>A következők miatt fordulhatott elő:</p>
             <ul>
-                <li>a mistyped address</li>
-                <li>an out-of-date link</li>
+                <li>elgépelt url</li>
+                <li>elavult hivatkozás</li>
             </ul>
             <script>
                 var GOOG_FIXURL_LANG = (navigator.language || '').slice(0,2),GOOG_FIXURL_SITE = location.host;
