--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <title>Olasz Balázs Ügyvédi Iroda | Főoldal</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
+        <meta name="apple-mobile-web-app-capable" content="yes">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
